.provarCaches/00D410000011HE0EAM/objects/rstk__icsrllink__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icsrllink</customHelpPage>
    <description>icsrllink__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icsrllink_parent__c &amp; &apos;_&apos; &amp;  rstk__icsrllink_child__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_child__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Child Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_cicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Child Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links (Child Serialized Item)</relationshipLabel>
        <relationshipName>cicitemicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_cicitemsrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Child Serialized Item</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links (Child Serialized Item)</relationshipLabel>
        <relationshipName>cicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_csoshipline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Child Shipped SO Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links (Child Shipped SO Line)</relationshipLabel>
        <relationshipName>cicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_csoshipsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Child Shipped Serialized Item</label>
        <referenceTo>rstk__soshipsrl__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links (Child Shipped Serialized Item)</relationshipLabel>
        <relationshipName>cicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_ctype__c</fullName>
        <label>Child Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped Kit</fullName>
                </value>
                <value>
                    <fullName>Shipped Serialized Item</fullName>
                </value>
                <value>
                    <fullName>Serialized Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>icsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_parent__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_picdhr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent DHR</label>
        <referenceTo>rstk__icdhr__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>icsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_picitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>picitemicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_picitemsrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Serialized Item</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>picsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_psoshipline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Shipped SO Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>picsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_psoshipsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Shipped Serialized Item</label>
        <referenceTo>rstk__soshipsrl__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links</relationshipLabel>
        <relationshipName>picsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_ptype__c</fullName>
        <label>Parent Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHR</fullName>
                </value>
                <value>
                    <fullName>Shipped Kit</fullName>
                </value>
                <value>
                    <fullName>Shipped Serialized Item</fullName>
                </value>
                <value>
                    <fullName>Serialized Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_salesdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Item Serial Manual Links (Sales Division)</relationshipLabel>
        <relationshipName>salesdivicsrllinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsrllink_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Item Serial Manual Link</label>
    <listViews>
        <fullName>rstk__RS_Item_Serial_Manual_Links</fullName>
        <columns>NAME</columns>
        <columns>rstk__icsrllink_div__c</columns>
        <columns>rstk__icsrllink_ptype__c</columns>
        <columns>rstk__icsrllink_picdhr__c</columns>
        <columns>rstk__icsrllink_picitem__c</columns>
        <columns>rstk__icsrllink_parent__c</columns>
        <columns>rstk__icsrllink_psoshipline__c</columns>
        <columns>rstk__icsrllink_salesdiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RS Item Serial Manual Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__all</fullName>
        <columns>NAME</columns>
        <columns>rstk__icsrllink_ctype__c</columns>
        <columns>rstk__icsrllink_cicitem__c</columns>
        <columns>rstk__icsrllink_cicitemsrl__c</columns>
        <columns>rstk__icsrllink_div__c</columns>
        <columns>rstk__icsrllink_ptype__c</columns>
        <columns>rstk__icsrllink_parent__c</columns>
        <columns>rstk__icsrllink_picitem__c</columns>
        <columns>rstk__icsrllink_csoshipsrl__c</columns>
        <columns>rstk__icsrllink_salesdiv__c</columns>
        <columns>rstk__icsrllink_psoshipline__c</columns>
        <columns>rstk__icsrllink_csoshipline__c</columns>
        <columns>rstk__icsrllink_child__c</columns>
        <columns>rstk__icsrllink_picitemsrl__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Serial Manual Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Child_Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Child Serialized Item is required when child entity type is &quot;Serialized Item&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ctype__c , &apos;Serialized Item&apos;) ,
 ISBLANK( rstk__icsrllink_cicitemsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Child Serialized Item is required when child entity type is &quot;Serialized Item&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Child_Shipped_Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Child Shipped Serialized Item is required when child entity type is &quot;Shipped Serialized Item&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ctype__c , &apos;Shipped Serialized Item&apos;) ,
 ISBLANK( rstk__icsrllink_csoshipsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Child Shipped Serialized Item is required when child entity type is &quot;Shipped Serialized Item&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Child_Shipped_So_Line_Required</fullName>
        <active>true</active>
        <description>Child Shipped SO Line is required when child entity type is &quot;Shipped Kit&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ctype__c , &apos;Shipped Kit&apos;) ,
 ISBLANK( rstk__icsrllink_csoshipline__c ) 
)</errorConditionFormula>
        <errorMessage>Child Shipped SO Line is required when child entity type is &quot;Shipped Kit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_DHR_Required</fullName>
        <active>true</active>
        <description>Parent DHR is required when parent entity type is &quot;DHR&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ptype__c , &apos;DHR&apos;) ,
 ISBLANK( rstk__icsrllink_picdhr__c ) 
)</errorConditionFormula>
        <errorMessage>Parent DHR is required when parent entity type is &quot;DHR&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Parent Serialized Item is required when parent entity type is &quot;Serialized Item&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ptype__c , &apos;Serialized Item&apos;) ,
 ISBLANK( rstk__icsrllink_picitemsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Parent Serialized Item is required when parent entity type is &quot;Serialized Item&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_Shipped_SO_Line_Required</fullName>
        <active>true</active>
        <description>Parent Shipped SO Line is required when parent entity type is &quot;Shipped Kit&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ptype__c , &apos;Shipped Kit&apos;) ,
 ISBLANK( rstk__icsrllink_psoshipline__c ) 
)</errorConditionFormula>
        <errorMessage>Parent Shipped SO Line is required when parent entity type is &quot;Shipped Kit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_Shipped_Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Parent Shipped Serialized Item is required when parent entity type is &quot;Shipped Serialized Item&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( rstk__icsrllink_ptype__c , &apos;Shipped Serialized Item&apos;) ,
 ISBLANK( rstk__icsrllink_psoshipsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Parent Shipped Serialized Item is required when parent entity type is &quot;Shipped Serialized Item&quot;</errorMessage>
    </validationRules>
</CustomObject>